[package]
name = "kvms_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "kvms_rs"
crate-type = ["staticlib"] # Creates static lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
